remove inline css

--- a/flipkart.html
+++ b/flipkart.html
@@ -28,25 +28,24 @@
             <div class="logo d-flex align-items-center justify-content-center w-100 position-relative">
                 <div class="title">
                     <img width="75" src="Images/Flipkart.jpg" alt="Flipkart" title="Flipkart"
-                        class="flipkart d-block m-0 p-0">
+                        class="flipkart d-block m-0 p-0" />
                 </div>
 
                 <div class="search m-2 shadow bg-white position-relative">
                     <form class="w-100" role="search">
                         <input class="flex-grow-1 form-control rounded-0 w-100" type="search"
-                            placeholder="Search for products, brands and more" aria-label="Search">
+                            placeholder="Search for products, brands and more" aria-label="Search" />
                     </form>
                     <div class="align-item-center search-icon bg-white p-1 pe-3 pt-2 position-absolute top-0">
                         <i class="fa-solid fa-magnifying-glass text-primary"></i>
                     </div>
                 </div>
 
-                <button class="navbar-toggler position-absolute top-0" type="button" data-bs-toggle="collapse"
+                <button class="navbar-toggler position-absolute top-0 border-0" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <i class="bi bi-list text-white"></i>
                 </button>
-
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <div class="login d-flex justify-content-center align-items-center gap-3 ms-4">
@@ -54,7 +53,7 @@
                             type="button">Login
                         </button>
 
-                        <p class="text-white seller" style="width: 8rem;">Become a Seller</p>
+                        <p class="text-white seller">Become a Seller</p>
 
                         <ul class="dropdown text-white m-auto">
                             <a class="nav-link dropdown-toggle active more" href="#" id="navbarDropdown" role="button"
@@ -75,7 +74,7 @@
 
                         <div class="cart ms-5 gap-2 flex-column">
                             <i class="fa-solid fa-cart-shopping text-white"></i>
-                            <p class="text-white m-auto d-inline ms-1" style="width: 8rem;">Cart</p>
+                            <p class="text-white m-auto d-inline ms-1">Cart</p>
                         </div>
                     </div>
                 </div>
@@ -180,7 +179,7 @@
                     </div>
 
                     <div class="d-flex overflow-auto">
-                        <div class="card deals-card" style="border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center">
                                 <img src="Images/watch.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -192,7 +191,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem; ">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center ">
                                 <img src="Images/Temple.webp" class="card-img-top w-50 m-auto" alt="Temple" />
                             </div>
@@ -203,7 +202,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style="border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center ">
                                 <img src="Images/tablates.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -214,7 +213,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center ">
                                 <img src="Images/home-decore.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -225,7 +224,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center ">
                                 <img src="Images/mobile1.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -236,7 +235,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card" >
                             <div class="image w-auto m-auto d-flex align-items-center ">
                                 <img src="Images/water-bottles.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -247,7 +246,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center ">
                                 <img src="Images/water-bottles.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -258,7 +257,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center ">
                                 <img src="Images/water-bottles.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -291,7 +290,7 @@
                     </div>
 
                     <div class="d-flex overflow-auto">
-                        <div class="card deals-card" style="border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/harmonium.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -302,7 +301,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem; ">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/flutes.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -313,7 +312,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style="border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/guitar.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -324,7 +323,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/musical-accesories.webp" class="card-img-top w-50 m-auto"
                                     alt="watch" />
@@ -336,7 +335,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/microphone-accessories.webp" class="card-img-top w-50 m-auto"
                                     alt="watch" />
@@ -348,7 +347,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -358,7 +357,7 @@
                                 <p class="text-muted">Now ₹999 only</p>
                             </div>
                         </div>
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -368,7 +367,7 @@
                                 <p class="text-muted">Now ₹999 only</p>
                             </div>
                         </div>
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -378,7 +377,7 @@
                                 <p class="text-muted">Now ₹999 only</p>
                             </div>
                         </div>
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -388,7 +387,7 @@
                                 <p class="text-muted">Now ₹999 only</p>
                             </div>
                         </div>
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/accesories.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -416,7 +415,7 @@
                     </div>
 
                     <div class="d-flex overflow-auto">
-                        <div class="card deals-card" style="border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi1.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -427,7 +426,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem; ">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi2.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -439,7 +438,7 @@
                         </div>
 
 
-                        <div class="card deals-card" style="border: 0rem;">
+                        <div class="card deals-card" >
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi3.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -450,7 +449,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi4.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -461,7 +460,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi5.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -472,7 +471,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi6.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -483,7 +482,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card" >
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi6.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -494,7 +493,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" style=" border: 0rem;">
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi6.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
