add span class in menubar

--- a/flipkart.html
+++ b/flipkart.html
@@ -60,7 +60,8 @@
                                 data-bs-toggle="dropdown">More</a>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                 <li><a class="dropdown-item" href="#"><i
-                                            class="bi bi-bell-fill m-sm-2 text-primary"></i>Notification Preference</a>
+                                            class="bi bi-bell-fill m-sm-2 text-primary"></i>Notification
+                                        Preference</a>
                                 </li>
                                 <li><a class="dropdown-item" href="#"><i
                                             class="bi bi-question-square-fill m-sm-2 text-primary"></i>24*7 Customer
@@ -123,17 +124,19 @@
 
             <div class="menubar-item">
                 <img src="Images/top-offers.webp" alt="flights" width="64" height="64" />
-                <p>Top Offers</p>
+                <p><span class="top">Top</span>Offers</p>
             </div>
+
 
             <div class="menubar-item">
                 <img src="Images/toys.webp" alt="toys" width="64" height="64" />
-                <p>Beauty, Toys & More</p>
+                <p><span class="beauty">Beauty</span> Toys <span class="toys">& More</span></p>
             </div>
+
 
             <div class="menubar-item">
                 <img src="Images/vehicle.webp" alt="vehicle" width="64" height="64" />
-                <p>Two Wheelers</p>
+                <p>Vehicles</p>
             </div>
         </div>
     </section>
@@ -235,7 +238,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" >
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center ">
                                 <img src="Images/water-bottles.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -438,7 +441,7 @@
                         </div>
 
 
-                        <div class="card deals-card" >
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi3.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
@@ -482,7 +485,7 @@
                             </div>
                         </div>
 
-                        <div class="card deals-card" >
+                        <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi6.webp" class="card-img-top w-50 m-auto" alt="watch" />
                             </div>
