--- a/flipkart.html
+++ b/flipkart.html
@@ -48,7 +48,7 @@
                 </button>
 
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <div class="login d-flex justify-content-center align-items-center gap-3 ms-4">
+                    <div class="login d-flex justify-content-center align-items-center ms-4">
                         <button class="login-btn btn-primary text-bg-light text-primary rounded-0 me-5"
                             type="button">Login
                         </button>
@@ -143,17 +143,14 @@
     <div>
 
         <!-- Carousel -->
-        <div class="container-fluid">
-            <div id="carousel" class="carousel slide mx-4">
-                <div class="container-fluid carousel-inner justify-content-center mt-2 position-relative">
-                    <div class="carousel-item active w-100 h-100">
+        <div class="container-fluid shadow d-flex justify-content-center">
+            <div id="carousel" class="carousel slide w-auto h-100">
+                <div class="container-fluid carousel-inner mt-2 position-relative">
+                    <div class="carousel-item active">
                         <img src="Images/carosel1.webp" class="d-block w-100 h-100" alt="carousel1" />
                     </div>
                     <div class="carousel-item">
-                        <img src="Images/carosel2.webp" class="d-block w-100" alt="carousel2" />
-                    </div>
-                    <div class="carousel-item">
-                        <img src="Images/carosel3.webp" class="d-block w-100" alt="carousel3" />
+                        <img src="Images/carosel3.webp" class="d-block w-100 h-100" alt="carousel3" />
                     </div>
 
                     <button class="carousel-control-prev p-5" type="button" data-bs-target="#carousel"
@@ -171,9 +168,9 @@
 
         <!-- Main Section-->
         <section class="main-section container-fluid mt-4">
-            <div class="deals-of-the-day deal-section d-flex w-100">
+            <div class="shadow deals-of-the-day deal-section d-flex">
                 <div class="shadow deals-section-inner deals-head">
-                    <div class="main-seaction-title d-flex justify-content-between p-2">
+                    <div class="main-seaction-title d-flex justify-content-between p-2 m-2 border-bottom">
                         <div class="product-title">
                             <h4>Deals of the Day</h4>
                             <p class="text-muted">Shop Now!</p>
@@ -181,7 +178,7 @@
                         <button type="button" class="button btn btn-primary">VIEW ALL</button>
                     </div>
 
-                    <div class="d-flex overflow-auto">
+                    <div class="d-flex overflow-auto mt-5">
                         <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center">
                                 <img src="Images/watch.webp" class="card-img-top w-50 m-auto" alt="watch" />
@@ -274,7 +271,7 @@
                 </div>
                 <div class="advertise d-flex justify-content-between">
                     <aside>
-                        <img src="Images/aside.jpg" alt="advertise" width="250px" />
+                        <img src="Images/aside.jpg" alt="advertise" width="250px"/>
                     </aside>
                 </div>
             </div>
@@ -282,9 +279,9 @@
 
         <!-- 2nd Main Section -->
         <section class="main-section container-fluid mt-3">
-            <div class="d-flex w-100 justify-content-between">
+            <div class="shadow d-flex justify-content-between">
                 <div class="view-all shadow w-100">
-                    <div class="main-seaction-title d-flex justify-content-between p-2">
+                    <div class="main-seaction-title d-flex justify-content-between p-2 m-2 border-bottom">
                         <div class="product-title">
                             <h4>Music Instruments</h4>
                             <p class="text-muted">Shop Now!</p>
@@ -292,7 +289,7 @@
                         <button type="button" class="button btn btn-primary">VIEW ALL</button>
                     </div>
 
-                    <div class="d-flex overflow-auto">
+                    <div class="d-flex overflow-auto mt-5">
                         <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/harmonium.webp" class="card-img-top w-50 m-auto" alt="watch" />
@@ -406,10 +403,10 @@
         </section>
 
         <!-- 3rd Main Section -->
-        <section class="main-section container-fluid mt-3 ">
-            <div class="d-flex w-100 justify-content-between">
+        <section class="shadow main-section container-fluid mt-3 ">
+            <div class="shadow d-flex w-100 justify-content-between">
                 <div class="view-all shadow w-100">
-                    <div class="main-seaction-title d-flex justify-content-between p-2">
+                    <div class="main-seaction-title d-flex justify-content-between p-2 m-2 border-bottom">
                         <div class="product-title">
                             <h4>Holi Essentials </h4>
                             <p class="text-muted">Shop Now!</p>
@@ -417,7 +414,7 @@
                         <button type="button" class="button btn btn-primary">VIEW ALL</button>
                     </div>
 
-                    <div class="d-flex overflow-auto">
+                    <div class="d-flex overflow-auto mt-5">
                         <div class="card deals-card">
                             <div class="image w-auto m-auto d-flex align-items-center h-50">
                                 <img src="Images/holi1.webp" class="card-img-top w-50 m-auto" alt="watch" />
