made responsive footer

--- a/flipkart.html
+++ b/flipkart.html
@@ -107,7 +107,7 @@
                 <p>Electronics</p>
             </div>
 
-            <div class="menubar-item">
+            <div class="menubar-item text-center">
                 <img src="Images/home.webp" alt="Home" width="64" height="64" />
                 <p>Home</p>
             </div>
@@ -143,11 +143,14 @@
     <div>
 
         <!-- Carousel -->
-        <div class="container-fluid shadow d-flex justify-content-center">
-            <div id="carousel" class="carousel slide w-auto h-100">
+        <div class="slider container-fluid d-flex justify-content-center mt-3">
+            <div id="carousel" class="carousel slide h-100">
                 <div class="container-fluid carousel-inner mt-2 position-relative">
                     <div class="carousel-item active">
                         <img src="Images/carosel1.webp" class="d-block w-100 h-100" alt="carousel1" />
+                    </div>
+                    <div class="carousel-item active">
+                        <img src="Images/carosel2.webp" class="d-block w-100 h-100" alt="carousel2" />
                     </div>
                     <div class="carousel-item">
                         <img src="Images/carosel3.webp" class="d-block w-100 h-100" alt="carousel3" />
@@ -168,14 +171,14 @@
 
         <!-- Main Section-->
         <section class="main-section container-fluid mt-4">
-            <div class="shadow deals-of-the-day deal-section d-flex">
-                <div class="shadow deals-section-inner deals-head">
-                    <div class="main-seaction-title d-flex justify-content-between p-2 m-2 border-bottom">
+            <div class="deals-of-the-day deal-section d-flex">
+                <div class="deals-section-inner deals-head">
+                    <div class="main-seaction-title d-flex justify-content-between p-4 m-2 border-bottom pb-0">
                         <div class="product-title">
                             <h4>Deals of the Day</h4>
                             <p class="text-muted">Shop Now!</p>
                         </div>
-                        <button type="button" class="button btn btn-primary">VIEW ALL</button>
+                        <button type="button" class="button btn btn-primary px-4 py-2">VIEW ALL</button>
                     </div>
 
                     <div class="d-flex overflow-auto mt-5">
@@ -271,22 +274,22 @@
                 </div>
                 <div class="advertise d-flex justify-content-between">
                     <aside>
-                        <img src="Images/aside.jpg" alt="advertise" width="250px"/>
+                        <img src="Images/aside.jpg" alt="advertise" width="250px" />
                     </aside>
                 </div>
             </div>
         </section>
 
         <!-- 2nd Main Section -->
-        <section class="main-section container-fluid mt-3">
-            <div class="shadow d-flex justify-content-between">
-                <div class="view-all shadow w-100">
-                    <div class="main-seaction-title d-flex justify-content-between p-2 m-2 border-bottom">
+        <section class="main-section container-fluid mt-4">
+            <div class="d-flex justify-content-between">
+                <div class="view-all w-100">
+                    <div class="main-seaction-title d-flex justify-content-between p-4 m-2 border-bottom pb-0">
                         <div class="product-title">
                             <h4>Music Instruments</h4>
                             <p class="text-muted">Shop Now!</p>
                         </div>
-                        <button type="button" class="button btn btn-primary">VIEW ALL</button>
+                        <button type="button" class="button btn btn-primary px-4 py-2">VIEW ALL</button>
                     </div>
 
                     <div class="d-flex overflow-auto mt-5">
@@ -403,15 +406,15 @@
         </section>
 
         <!-- 3rd Main Section -->
-        <section class="shadow main-section container-fluid mt-3 ">
-            <div class="shadow d-flex w-100 justify-content-between">
-                <div class="view-all shadow w-100">
-                    <div class="main-seaction-title d-flex justify-content-between p-2 m-2 border-bottom">
+        <section class=" main-section container-fluid mt-4 mb-4">
+            <div class="d-flex w-100 justify-content-between">
+                <div class="view-all w-100">
+                    <div class="main-section-title d-flex justify-content-between p-4 border-bottom pb-0">
                         <div class="product-title">
                             <h4>Holi Essentials </h4>
                             <p class="text-muted">Shop Now!</p>
                         </div>
-                        <button type="button" class="button btn btn-primary">VIEW ALL</button>
+                        <button type="button" class="button btn btn-primary px-4 py-2">VIEW ALL</button>
                     </div>
 
                     <div class="d-flex overflow-auto mt-5">
@@ -512,7 +515,7 @@
 
         <section class="footer mt-5 shadow">
             <div class="container-fluid text-center">
-                <div class="row row-cols-2 row-cols-lg-6 g-2 g-lg-3">
+                <div class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-2 g-lg-3">
                     <div class="col">
                         <div class="p-3"><i class="bi bi-bag-fill text-warning me-1"></i>Become a Seller</div>
                     </div>
