centerly align footer

--- a/index.html
+++ b/index.html
@@ -85,57 +85,57 @@
     </nav>
 
     <!-- Menubar -->
-    <section class="shadow p-3 bg-body rounded">
+    <section class="shadow p-2 bg-body rounded">
         <div class="menubar container d-flex justify-content-evenly">
             <div class="menubar-item">
-                <img src="Images/grocery.webp" alt="Grocery" width="64" height="64" />
+                <img src="Images/grocery.webp" alt="Grocery" width="64" />
                 <p>Grocery</p>
             </div>
 
             <div class="menubar-item">
-                <img src="Images/mobiles.webp" alt="Mobiles" width="64" height="64" />
+                <img src="Images/mobiles.webp" alt="Mobiles" width="64" />
                 <p>Mobiles</p>
             </div>
 
             <div class="menubar-item">
-                <img src="Images/clothes.webp" alt="Clothes" width="64" height="64" />
+                <img src="Images/clothes.webp" alt="Clothes" width="64" />
                 <p>Fashion</p>
             </div>
 
             <div class="menubar-item">
-                <img src="Images/laptop.webp" alt="Electronics" width="64" height="64" />
+                <img src="Images/laptop.webp" alt="Electronics" width="64" />
                 <p>Electronics</p>
             </div>
 
             <div class="menubar-item text-center">
-                <img src="Images/home.webp" alt="Home" width="64" height="64" />
+                <img src="Images/home.webp" alt="Home" width="64" />
                 <p>Home</p>
             </div>
 
             <div class="menubar-item">
-                <img src="Images/electronics.webp" alt="Appliances" width="64" height="64" />
+                <img src="Images/electronics.webp" alt="Appliances" width="64" />
                 <p>Appliances</p>
             </div>
 
             <div class="menubar-item px-2">
-                <img src="Images/flights.webp" alt="flights" width="64" height="64" />
+                <img src="Images/flights.webp" alt="flights" width="64"/>
                 <p>Travel</p>
             </div>
 
             <div class="menubar-item">
-                <img src="Images/top-offers.webp" alt="flights" width="64" height="64" />
+                <img src="Images/top-offers.webp" alt="flights" width="64">
                 <p><span class="top">Top</span>Offers</p>
             </div>
 
 
             <div class="menubar-item">
-                <img src="Images/toys.webp" alt="toys" width="64" height="64" />
+                <img src="Images/toys.webp" alt="toys" width="64"/>
                 <p><span class="beauty">Beauty</span> Toys <span class="toys">& More</span></p>
             </div>
 
 
             <div class="menubar-item">
-                <img src="Images/vehicle.webp" alt="vehicle" width="64" height="64" />
+                <img src="Images/vehicle.webp" alt="vehicle" width="64"/>
                 <p>Vehicles</p>
             </div>
         </div>
@@ -514,25 +514,25 @@
         <!-- Footer -->
 
         <section class="footer mt-5 shadow">
-            <div class="container-fluid text-center">
+            <div class="container-fluid ">
                 <div class="row row-cols-1 row-cols-md-3 row-cols-lg-6 g-2 g-lg-3">
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-bag-fill text-warning me-1"></i>Become a Seller</div>
+                        <div class="p-2"><i class="bi bi-bag-fill text-warning me-1"></i>Become a Seller</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-star-fill text-warning me-1"></i>Advertise</div>
+                        <div class="p-2"><i class="bi bi-star-fill text-warning me-1"></i>Advertise</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-gift text-warning me-1"></i>Gift Cards</div>
+                        <div class="p-2"><i class="bi bi-gift text-warning me-1"></i>Gift Cards</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-question-circle-fill text-warning me-1"></i>Help Center</div>
+                        <div class="p-2"><i class="bi bi-question-circle-fill text-warning me-1"></i>Help Center</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-c-circle text-warning me-1"></i>2007-2023 Flipkart.com</div>
+                        <div class="p-2"><i class="bi bi-c-circle text-warning me-1"></i>2007-2023 Flipkart.com</div>
                     </div>
                     <div class="col">
-                        <div class="p-3"><i class="bi bi-emoji-smile text-warning me-1"></i>Thanks, Visit Again</div>
+                        <div class="p-2"><i class="bi bi-emoji-smile text-warning me-1"></i>Thanks, Visit Again</div>
                     </div>
                 </div>
             </div>
